fall back to 'arial' instead of 'fantasy'
This allows the sheet to render on linux in Firefox in a readable
manner (instead of being unreadable wingdings)

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -15,7 +15,7 @@ select::-ms-expand {
 }
 
 h1 {
-    font-family: Copperplate, "Copperplate Gothic Light", fantasy;
+    font-family: Copperplate, "Copperplate Gothic Light", arial;
     font-weight: bold;
     width: 100%;
     font-size: 28px;
@@ -26,7 +26,7 @@ h1 {
 }
 
 h2 {
-    font-family: Copperplate, "Copperplate Gothic Light", fantasy;
+    font-family: Copperplate, "Copperplate Gothic Light", arial;
     font-weight: bold;
     width: 100%;
     font-size: 18px;
@@ -37,7 +37,7 @@ h2 {
 }
 
 h3 {
-    font-family: Copperplate, "Copperplate Gothic Light", fantasy;
+    font-family: Copperplate, "Copperplate Gothic Light", arial;
     font-weight: bold;
     width: 100%;
     line-height: 28px;
@@ -62,7 +62,7 @@ h3.sheet-divide::after, h3.sheet-divide::before {
 }
 
 h4 {
-    font-family: Copperplate, "Copperplate Gothic Light", fantasy;
+    font-family: Copperplate, "Copperplate Gothic Light", arial;
     font-weight: bold;
     width: 100%;
     font-size: 16px;
@@ -77,7 +77,7 @@ h4.sheet-tab-title {
 }
 
 h5 {
-    font-family: Copperplate, "Copperplate Gothic Light", fantasy;
+    font-family: Copperplate, "Copperplate Gothic Light", arial;
     font-weight: bold;
     font-size: 12px;
     text-align: left;
@@ -339,13 +339,13 @@ input.sheet-clear-vow + .sheet-vow-clear-label {
 
 .sheet-pc-name {
     width: 100%;
-    font-family: Copperplate, "Copperplate Gothic Light", fantasy;
+    font-family: Copperplate, "Copperplate Gothic Light", arial;
     font-weight: bold;
     font-size: 14px;
 }
 .sheet-debil-desc {
     width: 100%;
-    font-family: Copperplate, "Copperplate Gothic Light", fantasy;
+    font-family: Copperplate, "Copperplate Gothic Light", arial;
     font-weight: bold;
     font-size: 14px;
 }
@@ -354,7 +354,7 @@ input.sheet-clear-vow + .sheet-vow-clear-label {
 .sheet-page-label, 
 .sheet-vow-clear-label {
     width: 100%;
-    font-family: Copperplate, "Copperplate Gothic Light", fantasy;
+    font-family: Copperplate, "Copperplate Gothic Light", arial;
     font-weight: bold;
     font-size: 14px;
 }
@@ -440,7 +440,7 @@ input.sheet-filler[type="radio"]:checked ~ input.sheet-filler[type="radio"] + sp
 }
 
 .sheet-momentum-input {
-    font-family: Copperplate, "Copperplate Gothic Light", fantasy;
+    font-family: Copperplate, "Copperplate Gothic Light", arial;
     font-weight: bold;
     width: 40px;
     font-size: 13px;
@@ -453,7 +453,7 @@ input.sheet-filler[type="radio"]:checked ~ input.sheet-filler[type="radio"] + sp
 }
 
 .sheet-stats-input {
-    font-family: Copperplate, "Copperplate Gothic Light", fantasy;
+    font-family: Copperplate, "Copperplate Gothic Light", arial;
     font-weight: bold;
     width: 60px;
     line-height: 40px;
@@ -506,7 +506,7 @@ span.sheet-showhide {
     margin-right: 11px;
     border-radius: 4px;
     padding: 2px 4px;
-    font-family: Copperplate, "Copperplate Gothic Light", fantasy;
+    font-family: Copperplate, "Copperplate Gothic Light", arial;
     font-weight: bold;
     font-size: 14px;
 }
@@ -608,7 +608,7 @@ div.sheet-assets .repcontainer .repitem {
 .sheet-asset-type-dropdown {
     color: white;
     background: #343433;
-    font-family: Copperplate, "Copperplate Gothic Light", fantasy;
+    font-family: Copperplate, "Copperplate Gothic Light", arial;
     width: auto;
     font-size: 14px;
     -webkit-appearance: menulist;
@@ -683,7 +683,7 @@ input.sheet-border-bottom {
 	/*border: 1px solid;*/
 	color: black;
 	font-size: 1em;
-    font-family: Copperplate, "Copperplate Gothic Light", fantasy;
+    font-family: Copperplate, "Copperplate Gothic Light", arial;
     margin: 0px;
 }
 
