--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -537,21 +537,28 @@ input[type="checkbox"].sheet-showhide:checked ~ div.sheet-showhide,
 input[type="checkbox"].sheet-asset-companion:checked ~ div.sheet-companion,
 input[type="checkbox"].sheet-asset-path:checked ~ div.sheet-path,
 input[type="checkbox"].sheet-asset-combat-talent:checked ~ div.sheet-combat-talent,
-input[type="checkbox"].sheet-asset-ritual:checked ~ div.sheet-ritual,
-input[type="checkbox"].sheet-combattalent-requirement:checked ~ .sheet-combattalent-requirement,
-input[type="checkbox"].sheet-combat-talent-armour:checked ~ .sheet-armour-box-wrapper,
-input[type="checkbox"].sheet-path-wealth:checked ~ .sheet-wealth-box-wrapper,
-input[type="checkbox"].sheet-ritual-track:checked ~ .sheet-ritual-box-wrapper, 
-input[type="checkbox"].sheet-path-name:checked ~ .sheet-path-name,
-input[type="checkbox"].sheet-path-speciality:checked ~ .sheet-path-speciality,
-input[type="checkbox"].sheet-path-requirement:checked ~ .sheet-path-requirement,
-input[type="checkbox"].sheet-path-title:checked ~ .sheet-path-title,
-input[type="checkbox"].sheet-path-godsname:checked ~ .sheet-path-godsname,
-input[type="checkbox"].sheet-path-stat:checked ~ .sheet-path-stat {
+input[type="checkbox"].sheet-asset-ritual:checked ~ div.sheet-ritual {
     display: block;
 }
 
-textarea.sheet-asset-skill {
+input[type="checkbox"].sheet-cave-lion:checked ~ div.sheet-cave-lion,
+input[type="checkbox"].sheet-giant-spider:checked ~ div.sheet-giant-spider,
+input[type="checkbox"].sheet-hawk:checked ~ div.sheet-hawk,
+input[type="checkbox"].sheet-horse:checked ~ div.sheet-horse,
+input[type="checkbox"].sheet-hound:checked ~ div.sheet-hound,
+input[type="checkbox"].sheet-kindred:checked ~ div.sheet-kindred,
+input[type="checkbox"].sheet-mammoth:checked ~ div.sheet-mammoth,
+input[type="checkbox"].sheet-owl:checked ~ div.sheet-owl,
+input[type="checkbox"].sheet-raven:checked ~ div.sheet-raven,
+input[type="checkbox"].sheet-young-wyvern:checked ~ div.sheet-young-wyvern {
+    display: block;
+}
+
+select.sheet-path-dropdown option[value="alchemist"] ~ .sheet-alchemist {
+    display: flex;
+}
+
+textarea.sheet-asset-ability {
     width: 242px;
     height: 85px;
     margin: 0px 4px 10px 25px;
@@ -559,7 +566,7 @@ textarea.sheet-asset-skill {
     border: 0;
 }
 
-input[type="checkbox"].sheet-asset-skill {
+input[type="checkbox"].sheet-asset-ability {
     opacity: 1 !important;
     margin: 0px 0px 20px 15px !important;
 }
