(assets) update companion html and tweak styling

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -238,12 +238,11 @@ input.sheet-clear-vow + .sheet-vow-clear-label {
 
 .sheet-flex-container {
     display: flex;
-    flex-wrap: wrap;
 }
 
 .sheet-flex-wrapper {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     margin-bottom: 10px;
 }
 
@@ -558,12 +557,10 @@ select.sheet-path-dropdown option[value="alchemist"] ~ .sheet-alchemist {
     display: flex;
 }
 
-textarea.sheet-asset-ability {
-    width: 242px;
-    height: 85px;
-    margin: 0px 4px 10px 25px;
-    resize: none;
-    border: 0;
+div.sheet-asset-ability {
+    width: 100%;
+    height: 100%;
+    margin: 0px 4px 10px 10px;
 }
 
 input[type="checkbox"].sheet-asset-ability {
@@ -578,6 +575,7 @@ input[type="checkbox"].sheet-asset-ability {
     border: 2px solid #343433;
     margin-left: 44px;
     margin-bottom: 20px;
+    font-size: 15px;
 }
 
 div.sheet-assets{
@@ -610,7 +608,9 @@ div.sheet-assets .repcontainer .repitem {
     background: #343433;
     font-family: Copperplate, "Copperplate Gothic Light", arial;
     width: auto;
-    font-size: 14px;
+    font-size: 15px;
+    font-weight: bold;
+    text-transform: uppercase;
     -webkit-appearance: menulist;
     margin: 6px 4px;
 }
@@ -619,6 +619,9 @@ div.sheet-assets .repcontainer .repitem {
     -webkit-appearance: menulist;
     width: auto;
     margin: 6px 4px;
+    font-size: 15px;
+    font-weight: bold;
+    text-transform: uppercase;
 }
 
 div.sheet-assets .repitem {
