(assets) triage Kindred asset

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -563,6 +563,11 @@ div.sheet-asset-ability {
     margin: 0px 4px 10px 10px;
 }
 
+.sheet-asset-ability-write-in {
+    margin-top: 8px;
+    display: flex;
+}
+
 input[type="checkbox"].sheet-asset-ability {
     opacity: 1 !important;
     margin: 0px 0px 20px 15px !important;
