(assets) further fine-tune Companion asset styles

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -557,10 +557,19 @@ select.sheet-path-dropdown option[value="alchemist"] ~ .sheet-alchemist {
     display: flex;
 }
 
+.sheet-asset-description {
+    margin: 0 12px 5px 12px;
+}
+
 div.sheet-asset-ability {
     width: 100%;
     height: 100%;
-    margin: 0px 4px 10px 10px;
+    margin: 0px 12px 10px 10px;
+}
+
+.sheet-asset-write-in
+{
+    display: flex;
 }
 
 .sheet-asset-ability-write-in {
@@ -568,9 +577,22 @@ div.sheet-asset-ability {
     display: flex;
 }
 
+.sheet-asset-write-in input,
+.sheet-asset-ability-write-in input {
+    height: 100%;
+    width: 100%;
+    padding: 0;
+    margin-left: 5px;
+    margin-top: 2px;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+
+
 input[type="checkbox"].sheet-asset-ability {
-    opacity: 1 !important;
-    margin: 0px 0px 20px 15px !important;
+    opacity: 1;
+    margin: 0px 5px 20px 5px;
 }
 
 .sheet-asset {
