(assets) italicize Move names & tweak styles

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -564,17 +564,25 @@ select.sheet-path-dropdown option[value="alchemist"] ~ .sheet-alchemist {
 div.sheet-asset-ability {
     width: 100%;
     height: 100%;
-    margin: 0px 12px 10px 10px;
+    margin: 0px 12px 6px 10px;
 }
 
 .sheet-asset-write-in
 {
-    display: flex;
+    margin-bottom: 4px;
 }
 
 .sheet-asset-ability-write-in {
-    margin-top: 8px;
+    margin-top: 4px;
+}
+
+.sheet-asset-write-in ,
+.sheet-asset-ability-write-in {
     display: flex;
+}
+
+.sheet-asset input.sheet-border-bottom {
+    border-bottom-color: #414042;
 }
 
 .sheet-asset-write-in input,
@@ -592,17 +600,17 @@ div.sheet-asset-ability {
 
 input[type="checkbox"].sheet-asset-ability {
     opacity: 1;
-    margin: 0px 5px 20px 5px;
+    margin: -5px 5px 0 5px;
 }
 
 .sheet-asset {
     display: inline-block;
     width: 320px;
     max-width: 320px;
-    border: 2px solid #343433;
+    border: 2px solid #414042;
     margin-left: 44px;
     margin-bottom: 20px;
-    font-size: 15px;
+    font-size: 14px;
 }
 
 div.sheet-assets{
@@ -620,19 +628,19 @@ div.sheet-assets .repcontainer .repitem {
 }
 
 .sheet-asset-header {
-    background: #343433;
+    background: #414042;
     color: white;
 }
 
 .sheet-asset-type-selection {
-    background: #343433;
+    background: #414042;
     color: white;
     border:0;
 }
 
 .sheet-asset-type-dropdown {
     color: white;
-    background: #343433;
+    background: #414042;
     font-family: Copperplate, "Copperplate Gothic Light", arial;
     width: auto;
     font-size: 15px;
