added formatting for divs

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -540,7 +540,72 @@ input[type="checkbox"].sheet-kindred:checked ~ div.sheet-kindred,
 input[type="checkbox"].sheet-mammoth:checked ~ div.sheet-mammoth,
 input[type="checkbox"].sheet-owl:checked ~ div.sheet-owl,
 input[type="checkbox"].sheet-raven:checked ~ div.sheet-raven,
-input[type="checkbox"].sheet-young-wyvern:checked ~ div.sheet-young-wyvern {
+input[type="checkbox"].sheet-young-wyvern:checked ~ div.sheet-young-wyvern,
+input[type="checkbox"].sheet-alchemist:checked ~ div.sheet-alchemist,
+input[type="checkbox"].sheet-animal-kin:checked ~ div.sheet-animal-kin,
+input[type="checkbox"].sheet-banner-sworn:checked ~ div.sheet-banner-sworn,
+input[type="checkbox"].sheet-battle-scarred:checked ~ div.sheet-battle-scarred,
+input[type="checkbox"].sheet-blade-bound:checked ~ div.sheet-blade-bound,
+input[type="checkbox"].sheet-bonded:checked ~ div.sheet-bonded,
+input[type="checkbox"].sheet-dancer:checked ~ div.sheet-dancer,
+input[type="checkbox"].sheet-devotant:checked ~ div.sheet-devotant,
+input[type="checkbox"].sheet-empowered:checked ~ div.sheet-empowered,
+input[type="checkbox"].sheet-fortune-hunter:checked ~ div.sheet-fortune-hunter,
+input[type="checkbox"].sheet-herbalist:checked ~ div.sheet-herbalist,
+input[type="checkbox"].sheet-honorbound:checked ~ div.sheet-honorbound,
+input[type="checkbox"].sheet-improviser:checked ~ div.sheet-improviser,
+input[type="checkbox"].sheet-infiltrator:checked ~ div.sheet-infiltrator,
+input[type="checkbox"].sheet-loyalist:checked ~ div.sheet-loyalist,
+input[type="checkbox"].sheet-masked:checked ~ div.sheet-masked,
+input[type="checkbox"].sheet-oathbreaker:checked ~ div.sheet-oathbreaker,
+input[type="checkbox"].sheet-outcast:checked ~ div.sheet-outcast,
+input[type="checkbox"].sheet-pretender:checked ~ div.sheet-pretender,
+input[type="checkbox"].sheet-revenant:checked ~ div.sheet-revenant,
+input[type="checkbox"].sheet-rider:checked ~ div.sheet-rider,
+input[type="checkbox"].sheet-ritualist:checked ~ div.sheet-ritualist,
+input[type="checkbox"].sheet-shadow-kin:checked ~ div.sheet-shadow-kin,
+input[type="checkbox"].sheet-sighted:checked ~ div.sheet-sighted,
+input[type="checkbox"].sheet-slayer:checked ~ div.sheet-slayer,
+input[type="checkbox"].sheet-spirit-bound:checked ~ div.sheet-spirit-bound,
+input[type="checkbox"].sheet-storyweaver:checked ~ div.sheet-storyweaver,
+input[type="checkbox"].sheet-trickster:checked ~ div.sheet-trickster,
+input[type="checkbox"].sheet-veteran:checked ~ div.sheet-veteran,
+input[type="checkbox"].sheet-waterborn:checked ~ div.sheet-waterborn,
+input[type="checkbox"].sheet-wayfinder:checked ~ div.sheet-wayfinder,
+input[type="checkbox"].sheet-weapon-master:checked ~ div.sheet-weapon-master,
+input[type="checkbox"].sheet-wildblood:checked ~ div.sheet-wildblood,
+input[type="checkbox"].sheet-wright:checked ~ div.sheet-wright,
+input[type="checkbox"].sheet-archer:checked ~ div.sheet-archer,
+input[type="checkbox"].sheet-berserker:checked ~ div.sheet-berserker,
+input[type="checkbox"].sheet-brawler:checked ~ div.sheet-brawler,
+input[type="checkbox"].sheet-cutthroat:checked ~ div.sheet-cutthroat,
+input[type="checkbox"].sheet-duelist:checked ~ div.sheet-duelist,
+input[type="checkbox"].sheet-fletcher:checked ~ div.sheet-fletcher,
+input[type="checkbox"].sheet-ironclad:checked ~ div.sheet-ironclad,
+input[type="checkbox"].sheet-long-arm:checked ~ div.sheet-long-arm,
+input[type="checkbox"].sheet-shield-bearer:checked ~ div.sheet-shield-bearer,
+input[type="checkbox"].sheet-skirmisher:checked ~ div.sheet-skirmisher,
+input[type="checkbox"].sheet-slinger:checked ~ div.sheet-slinger,
+input[type="checkbox"].sheet-sunderer:checked ~ div.sheet-sunderer,
+input[type="checkbox"].sheet-swordmaster:checked ~ div.sheet-swordmaster,
+input[type="checkbox"].sheet-thunder-bringer:checked ~ div.sheet-thunder-bringer,
+input[type="checkbox"].sheet-augur:checked ~ div.sheet-augur,
+input[type="checkbox"].sheet-awakening:checked ~ div.sheet-awakening,
+input[type="checkbox"].sheet-bind:checked ~ div.sheet-bind,
+input[type="checkbox"].sheet-communion:checked ~ div.sheet-communion,
+input[type="checkbox"].sheet-divination:checked ~ div.sheet-divination,
+input[type="checkbox"].sheet-invoke:checked ~ div.sheet-invoke,
+input[type="checkbox"].sheet-keen:checked ~ div.sheet-keen,
+input[type="checkbox"].sheet-leech:checked ~ div.sheet-leech,
+input[type="checkbox"].sheet-lightbearer:checked ~ div.sheet-lightbearer,
+input[type="checkbox"].sheet-scry:checked ~ div.sheet-scry,
+input[type="checkbox"].sheet-shadow-walk:checked ~ div.sheet-shadow-walk,
+input[type="checkbox"].sheet-sway:checked ~ div.sheet-sway,
+input[type="checkbox"].sheet-talisman:checked ~ div.sheet-talisman,
+input[type="checkbox"].sheet-tether:checked ~ div.sheet-tether,
+input[type="checkbox"].sheet-totem:checked ~ div.sheet-totem,
+input[type="checkbox"].sheet-visage:checked ~ div.sheet-visage,
+input[type="checkbox"].sheet-ward:checked ~ div.sheet-ward {
     display: block;
 }
 
@@ -685,16 +750,13 @@ div.sheet-assets .repcontrol{
     height: 72px;
 }
 
-.sheet-combat-talent-requirement-area {
-    height: 38px
-}
-
 input.sheet-border-bottom {
     border-bottom: 1px solid black;
 }
 
 .sheet-combat-talent-requirement-area {
-    height: 20px !important;
+    height: auto !important;
+    margin-bottom: 5px;
 }
 
 /* ROLL TEMPLATE */
