cleaned up lists in assets

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -747,16 +747,12 @@ div.sheet-assets .repcontrol{
 }
 
 .sheet-requirement-area {
-    height: 72px;
+    height: auto;
+    margin-bottom: 5px;
 }
 
 input.sheet-border-bottom {
     border-bottom: 1px solid black;
-}
-
-.sheet-combat-talent-requirement-area {
-    height: auto !important;
-    margin-bottom: 5px;
 }
 
 /* ROLL TEMPLATE */
