(assets) standardize html, especially around asset descriptions

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -635,6 +635,7 @@ div.sheet-asset-ability {
 .sheet-asset-write-in ,
 .sheet-asset-ability-write-in {
     display: flex;
+    white-space: nowrap;
 }
 
 .sheet-asset input.sheet-border-bottom {
@@ -734,12 +735,6 @@ div.sheet-assets .repcontrol{
 
 .sheet-armour-box-wrapper {
     margin-bottom: 10px;
-}
-
-.sheet-companion-desc,
-.sheet-combattalent-desc,
-.sheet-path-desc {
-    margin-left: 5px;
 }
 
 .sheet-no-border {
