(assets) font size & line height tweaks

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -622,6 +622,10 @@ div.sheet-asset-ability {
     height: 100%;
     margin: 0px 12px 6px 10px;
 }
+div.sheet-asset-ability ul {
+    margin-left: 15px;
+    margin-bottom: 0;
+}
 
 .sheet-asset-write-in
 {
@@ -667,7 +671,8 @@ input[type="checkbox"].sheet-asset-ability {
     border: 2px solid #414042;
     margin-left: 44px;
     margin-bottom: 20px;
-    font-size: 14px;
+    font-size: 14.3px;
+    line-height: 1.25;
 }
 
 div.sheet-assets{
@@ -710,8 +715,8 @@ div.sheet-assets .repcontainer .repitem {
 .sheet-sub-dropdown {
     -webkit-appearance: menulist;
     width: auto;
-    margin: 6px 4px;
-    font-size: 15px;
+    margin: 7px 4px;
+    font-size: 17px;
     font-weight: bold;
     text-transform: uppercase;
 }
