(assets) standardize & style tracks

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -48,10 +48,6 @@ h3 {
     text-transform: uppercase;
 }
 
-h3.sheet-ritual-track-text {
-    line-height: 28px;
-}
-
 h3.sheet-divide::after, h3.sheet-divide::before {
     display: inline-block;
     content: "";
@@ -295,46 +291,6 @@ input.sheet-clear-vow + .sheet-vow-clear-label {
     border: 2px solid black;
     margin-bottom: 2px;
 }
-
-.sheet-companion-health-box,
-.sheet-companion-wealth-box {
-    width: 45px;
-    height: 40px;
-    display: inline-flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-radius: 0%;
-    background: transparent;
-    border: 2px solid black;
-    margin-bottom: 2px;
-}
-
-.sheet-combat-talent-armour-box {
-    width: 149px;
-    display: inline-flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-radius: 0%;
-    background: transparent;
-    border: 2px solid black;
-    margin-bottom: 2px;
-}
-
-.sheet-ritual-track-box {
-    width: 37px;
-    height: 42x;
-    display: inline-flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-radius: 0%;
-    background: transparent;
-    border: 2px solid black;
-    margin-bottom: 2px;
-}
-
 
 .sheet-pc-name {
     width: 100%;
@@ -730,16 +686,35 @@ div.sheet-assets .repcontrol{
     max-width: 320px !important;
 }
 
-.sheet-health-box-wrapper,
-.sheet-wealth-box-wrapper,
-.sheet-ritual-box-wrapper {
-    margin-left: 5px;
-    margin-bottom: 10px;
-    margin-top: 10px;
+.sheet-asset-track-wrapper {
+    margin: 10px;
+    display: flex;
 }
 
-.sheet-armour-box-wrapper {
-    margin-bottom: 10px;
+.sheet-asset-track-box {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0%;
+    background: transparent;
+    border: 2px solid #414042;
+    padding: 5px;
+    margin-bottom: 2px;
+}
+
+.sheet-asset-track-wrapper-wordy {
+    text-transform: uppercase;
+}
+
+.sheet-asset-track-wrapper-wordy .sheet-asset-track-box {
+    flex-direction: row;
+}
+
+.sheet-asset-track-box-display {
+    font-size: 17px;
+    font-weight: bold;
 }
 
 .sheet-no-border {
