Update after release
Changed the links to img to the Roll20 folder
Change an autocalc field to a sheetworker

--- a/FACES (French)/FACES_CSS.css
+++ b/FACES (French)/FACES_CSS.css
@@ -7,7 +7,7 @@
 .sheet-container {
     max-width:1100px;
     min-width:1100px;
-    border-image-source: url(https://i.goopics.net/bv23p.png);
+    border-image-source: url(http://imgsrv.roll20.net/?src=raw.githubusercontent.com/Roll20/roll20-character-sheets/master/FACES%2520%28French%29/FACES_png.png);
     border-image-slice: 45 55 50 55;
     border-image-width: 2%;
     border-image-outset: 10px 20px 10px 20px;
