--- a/Outbreak/outbreak.scss
+++ b/Outbreak/outbreak.scss
@@ -70,7 +70,7 @@ div.sheet-grid {
   grid-row-gap: 0.5em;
 }
 
-div.sheet-kob-row {
+div.sheet-outbreak-row {
   grid-template-columns: 1fr 1fr;
   width: 100%;
 
@@ -81,6 +81,23 @@ div.sheet-kob-row {
 
   div.sheet-biobox {
     grid-template-columns: 8em 1fr;
+  }
+
+  div.sheet-navigation {
+    grid-template-columns: 8em 1fr;
+    display: flex;
+    align-content: center;
+    justify-content: space-evenly;
+  }
+
+  div.sheet-pointsbox {
+    display: flex;
+    align-content: center;
+    justify-content: space-evenly;
+    input.sheet-points {
+      height: 24px;
+      width: 26px;
+    }
   }
 
   div.sheet-attributebox {
@@ -108,13 +125,6 @@ div.sheet-kob-row {
     }
   }
 
-  div.sheet-navigation {
-    grid-template-columns: 8em 1fr;
-    display: flex;
-    align-content: center;
-    justify-content: space-evenly;
-  }
-
   div.sheet-spewlabel {
     background-image: url("https://i.imgur.com/wgDarvp.png");
     background-repeat: no-repeat;
@@ -123,99 +133,26 @@ div.sheet-kob-row {
     font-weight: bold;
   }
 
-  div.sheet-dicebox {
-    grid-template-columns: 3em 1fr 1fr 3em;
+  div.sheet-dicelabel {
+    background-image: url("https://i.imgur.com/lPWJPdo.png");
+    background-repeat: no-repeat;
+    background-position: center top;
+    text-align: center;
+    font-weight: bold;
+  }
 
+  div.sheet-skillbox {
+    .sheet-skillname {
+      width: 110px;
+    }
+    .sheet-skillstat {
+      width: 28px;
+    }
+    display: flex;
+    align-content: center;
+    justify-content: space-evenly;
     button {
-      &:nth-of-type(odd) {
-        grid-column: 1;
-      }
-      &:nth-of-type(even) {
-        grid-column: 4;
-      }
     }
-
-    select {
-      font-size: 4em;
-      height: 100%;
-      margin: 0px;
-      padding-left: 25%;
-      width: 100%;
-
-      &:nth-of-type(odd) {
-        grid-column: 2;
-      }
-      &:nth-of-type(even) {
-        grid-column: 3;
-      }
-
-      &[name="attr_flight"] {
-        grid-row: 1;
-      }
-      &[name="attr_brawn"] {
-        grid-row: 2;
-      }
-      &[name="attr_grit"] {
-        grid-row: 3;
-      }
-    }
-
-    optgroup {
-      font-size: 0.5em;
-    }
-
-    option {
-      font-size: 0.8em;
-    }
-  }
-
-  div.sheet-strenghtsbox,
-  div.sheet-flawsbox {
-    grid-template-columns: 2em 1fr 2em 1fr;
-    grid-column-gap: 0.2em;
-
-    label {
-      height: 100%;
-
-      &.sheet-skilledat {
-        grid-column: 1 / 2;
-      }
-
-      &.sheet-skillatcheckbox {
-        grid-column: 3 / 5;
-      }
-    }
-
-    input {
-      &[type="checkbox"] {
-        height: 25px;
-        width: 25px;
-      }
-    }
-
-    span {
-      font-weight: bold;
-      font-variant: small-caps;
-    }
-  }
-
-  div.sheet-strenghtsbox {
-    grid-template-columns: 2em 1fr 2em 1fr;
-
-    h2 {
-      grid-column: 1 / 5;
-    }
-  }
-  div.sheet-flawsbox {
-    grid-template-columns: 2em 1fr 2em 1fr 2em 1fr;
-
-    h2 {
-      grid-column: 1 / 7;
-    }
-  }
-
-  div.sheet-boxnotes {
-    grid-column: 1 / 3;
   }
 }
 
