--- a/Outbreak/outbreak.css
+++ b/Outbreak/outbreak.css
@@ -68,26 +68,44 @@ div.sheet-grid {
   grid-row-gap: 0.5em;
 }
 
-div.sheet-kob-row {
+div.sheet-outbreak-row {
   grid-template-columns: 1fr 1fr;
   width: 100%;
 }
 
-div.sheet-kob-row img.sheet-header {
+div.sheet-outbreak-row img.sheet-header {
   height: 30px;
   width: 200px;
 }
 
-div.sheet-kob-row div.sheet-biobox {
+div.sheet-outbreak-row div.sheet-biobox {
   grid-template-columns: 8em 1fr;
 }
 
-div.sheet-kob-row div.sheet-attributebox img {
+div.sheet-outbreak-row div.sheet-navigation {
+  grid-template-columns: 8em 1fr;
+  display: flex;
+  align-content: center;
+  justify-content: space-evenly;
+}
+
+div.sheet-outbreak-row div.sheet-pointsbox {
+  display: flex;
+  align-content: center;
+  justify-content: space-evenly;
+}
+
+div.sheet-outbreak-row div.sheet-pointsbox input.sheet-points {
+  height: 24px;
+  width: 26px;
+}
+
+div.sheet-outbreak-row div.sheet-attributebox img {
   width: 40px;
   height: 40px;
 }
 
-div.sheet-kob-row div.sheet-attributebox input.sheet-spewbonus {
+div.sheet-outbreak-row div.sheet-attributebox input.sheet-spewbonus {
   border: 2px solid #00b300;
   font-weight: bold;
   text-align: center;
@@ -96,7 +114,7 @@ div.sheet-kob-row div.sheet-attributebox input.sheet-spewbonus {
   float: left;
 }
 
-div.sheet-kob-row div.sheet-attributebox input.sheet-spewones {
+div.sheet-outbreak-row div.sheet-attributebox input.sheet-spewones {
   border: 2px solid lightgrey;
   font-weight: bold;
   text-align: center;
@@ -105,14 +123,7 @@ div.sheet-kob-row div.sheet-attributebox input.sheet-spewones {
   float: right;
 }
 
-div.sheet-kob-row div.sheet-navigation {
-  grid-template-columns: 8em 1fr;
-  display: flex;
-  align-content: center;
-  justify-content: space-evenly;
-}
-
-div.sheet-kob-row div.sheet-spewlabel {
+div.sheet-outbreak-row div.sheet-spewlabel {
   background-image: url("https://i.imgur.com/wgDarvp.png");
   background-repeat: no-repeat;
   background-position: center top;
@@ -120,105 +131,26 @@ div.sheet-kob-row div.sheet-spewlabel {
   font-weight: bold;
 }
 
-div.sheet-kob-row div.sheet-dicebox {
-  grid-template-columns: 3em 1fr 1fr 3em;
-}
-
-div.sheet-kob-row div.sheet-dicebox button:nth-of-type(odd) {
-  grid-column: 1;
-}
-
-div.sheet-kob-row div.sheet-dicebox button:nth-of-type(even) {
-  grid-column: 4;
-}
-
-div.sheet-kob-row div.sheet-dicebox select {
-  font-size: 4em;
-  height: 100%;
-  margin: 0px;
-  padding-left: 25%;
-  width: 100%;
-}
-
-div.sheet-kob-row div.sheet-dicebox select:nth-of-type(odd) {
-  grid-column: 2;
-}
-
-div.sheet-kob-row div.sheet-dicebox select:nth-of-type(even) {
-  grid-column: 3;
-}
-
-div.sheet-kob-row div.sheet-dicebox select[name="attr_flight"] {
-  grid-row: 1;
-}
-
-div.sheet-kob-row div.sheet-dicebox select[name="attr_brawn"] {
-  grid-row: 2;
-}
-
-div.sheet-kob-row div.sheet-dicebox select[name="attr_grit"] {
-  grid-row: 3;
-}
-
-div.sheet-kob-row div.sheet-dicebox optgroup {
-  font-size: 0.5em;
-}
-
-div.sheet-kob-row div.sheet-dicebox option {
-  font-size: 0.8em;
-}
-
-div.sheet-kob-row div.sheet-strenghtsbox,
-div.sheet-kob-row div.sheet-flawsbox {
-  grid-template-columns: 2em 1fr 2em 1fr;
-  grid-column-gap: 0.2em;
-}
-
-div.sheet-kob-row div.sheet-strenghtsbox label,
-div.sheet-kob-row div.sheet-flawsbox label {
-  height: 100%;
-}
-
-div.sheet-kob-row div.sheet-strenghtsbox label.sheet-skilledat,
-div.sheet-kob-row div.sheet-flawsbox label.sheet-skilledat {
-  grid-column: 1 / 2;
-}
-
-div.sheet-kob-row div.sheet-strenghtsbox label.sheet-skillatcheckbox,
-div.sheet-kob-row div.sheet-flawsbox label.sheet-skillatcheckbox {
-  grid-column: 3 / 5;
-}
-
-div.sheet-kob-row div.sheet-strenghtsbox input[type="checkbox"],
-div.sheet-kob-row div.sheet-flawsbox input[type="checkbox"] {
-  height: 25px;
-  width: 25px;
-}
-
-div.sheet-kob-row div.sheet-strenghtsbox span,
-div.sheet-kob-row div.sheet-flawsbox span {
+div.sheet-outbreak-row div.sheet-dicelabel {
+  background-image: url("https://i.imgur.com/lPWJPdo.png");
+  background-repeat: no-repeat;
+  background-position: center top;
+  text-align: center;
   font-weight: bold;
-  font-variant: small-caps;
 }
 
-div.sheet-kob-row div.sheet-strenghtsbox {
-  grid-template-columns: 2em 1fr 2em 1fr;
+div.sheet-outbreak-row div.sheet-skillbox {
+  display: flex;
+  align-content: center;
+  justify-content: space-evenly;
 }
 
-div.sheet-kob-row div.sheet-strenghtsbox h2 {
-  grid-column: 1 / 5;
+div.sheet-outbreak-row div.sheet-skillbox .sheet-skillname {
+  width: 110px;
 }
 
-div.sheet-kob-row div.sheet-flawsbox {
-  grid-template-columns: 2em 1fr 2em 1fr 2em 1fr;
-}
-
-div.sheet-kob-row div.sheet-flawsbox h2 {
-  grid-column: 1 / 7;
-}
-
-div.sheet-kob-row div.sheet-boxnotes {
-  grid-column: 1 / 3;
+div.sheet-outbreak-row div.sheet-skillbox .sheet-skillstat {
+  width: 28px;
 }
 
 /* ROLL TEMPLATE
